# BEAR

./: .gitignore  .gitmodules  CMakeLists.txt  DESIGN_BOOT.txt  MMC_SPIDEV_DEVTREE_SAVE.txt  README.md
arch/: CMakeLists.txt
arch/riscv/: CMakeLists.txt  riscv.cmake
arch/riscv/common/irq/: riscv-irq.h  vector-table.c  vector-table.h
arch/riscv/common/src/: CMakeLists.txt  apps-startup.c  dev_init.c  dev_init.h  global_devices.h  global_pointers.h  syscalls.c  zebbs-startup.c
arch/riscv/src/: base.h
arch/riscv/veronica/: CMakeLists.txt  app-linker.ld  apps-linker.ld  riscv.cmake  zebbs-linker.ld
arch/riscv/veronica/src/: CMakeLists.txt  base.h  riscv-csr.h
arch/riscv/wally/: CMakeLists.txt  linker.ld  riscv.cmake
docs/notes/: assem.txt
src/: CMakeLists.txt  README.md
src/apps/: CMakeLists.txt  README.md  axi_tft_sdcard_fatfs_read_bitmap.c  axi_tft_write.c  led_gpio_timer_irq.c  pmp_write_lock_read.c  sdcard_fatfs_read.c  sdcard_raw_read.c  spi_echo.c  uart_echo.c  uart_echo_irq.c
src/drivers/: CMakeLists.txt
src/drivers/axi_ethernet_lite/: CMakeLists.txt  README.md  axi_ethernet_lite.h
src/drivers/axi_ethernet_lite/lwip_contrib/ports/xilinx/: CMakeLists.txt
src/drivers/axi_ethernet_lite/lwip_contrib/ports/xilinx/netif/: CMakeLists.txt
src/drivers/axi_ethernet_lite/src/xilinx/: axi_ethernet_lite.c  axi_ethernet_lite_map.h
src/drivers/axi_tft/: CMakeLists.txt  README.md  axi_tft.h
src/drivers/axi_tft/src/xilinx/: axi_tft.c  axi_tft_map.h
src/drivers/clint/: CMakeLists.txt  README.md
src/drivers/gpio/: CMakeLists.txt  README.md  gpio.h
src/drivers/gpio/src/xilinx/: gpio.c  gpio_map.h
src/drivers/plic/: CMakeLists.txt  README.md  plic.h
src/drivers/spi/: CMakeLists.txt  README.md  spi.c  spi.h
src/drivers/spi/src/altera/: spi.c  spi_map.h
src/drivers/uart/: CMakeLists.txt  README.md  uart.c  uart.h
src/drivers/uart/src/xilinx/: uart.c  uart_map.h
src/util/: CMakeLists.txt
src/util/beario/: CMakeLists.txt  README.md  beario.c  beario.h
src/util/beario/src/: beario.c
src/util/beario/src/stdout/: beario_uart.c
src/util/bmpm/: CMakeLists.txt  README.md  bmpm.c  bmpm.h
src/util/pff3a/: CMakeLists.txt  README.md  diskio.c  diskio.h  pff.h  pffconf.h
src/util/pff3a/src/: sdcard_diskio.c
src/util/sdcard_spi/: CMakeLists.txt  README.md  sdcard_spi.c  sdcard_spi.h
src/util/yxml/: CMakeLists.txt
src/zeb/: CMakeLists.txt  README.md
src/zebbs/: CMakeLists.txt  README.md  zebbs.c
